--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "install": "^0.13.0",
+    "jsdom": "^21.1.0",
     "npm": "^9.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest --ui",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@vitejs/plugin-react": "^3.0.1",
+    "@vitest/ui": "^0.28.2",
+    "vite": "^4.0.4",
+    "vitest": "^0.28.2"
   }
 }
